Added functionality for uploading images

--- a/render/index.html
+++ b/render/index.html
@@ -67,5 +67,7 @@
       <p class="text-white text-lg text-center font-mono mt-6"><strong>File: </strong><span id="filename"></span></p>
       <p class="text-white text-lg text-center font-mono mt-2"><strong>Output: </strong><span id="output-path"></span></p>
     </div>
+
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
